--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -1,41 +1,41 @@
-{{!-- Copyright (C) 2012-present, The Authors. This program is free software: you can redistribute it and/or  modify it under the terms of the GNU Affero General Public License, version 3, as published by the Free Software Foundation. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details. You should have received a copy of the GNU Affero General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>. --}}
+{{!-- Copyright (C) 2012-present, The Authors. This program is free software: you can redistribute it and/or modify it
+under the terms of the GNU Affero General Public License, version 3, as published by the Free Software Foundation. This
+program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty
+of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details. You
+should have received a copy of the GNU Affero General Public License along with this program. If not, see
+<http: //www.gnu.org/licenses />. --}}
 
 
 <div id="comment_shower">
 
-{{#if needSocial}}
-{{!-- ================ CONNECT FACEBOOK / TWITTER ================ --}}
-
-
-{{else}}  {{!-- !needSocial --}}
-
-{{#if empty}}
-  <div  style="margin: 20px;" class="Notification Notification--warning"> {{!-- empty scenario div --}}
-  {{#if subscribed}}
+  {{#if empty}}
+  <div style="margin: 20px;" class="Notification Notification--warning"> {{!-- empty scenario div --}}
+    {{#if subscribed}}
     <p class="HeadingF HeadingF--light "><i class="fa fa-bell-o"></i>&nbsp;<strong>{{txt1}}</strong></p>
     <p>{{txt2}}</p>
     <p>
       {{#ifNotIE8}}
-        <i class="fa fa-check-square-o" style="font-size: 20px; color: #2ecc71; position: relative; top: 1px"></i>
+      <i class="fa fa-check-square-o" style="font-size: 20px; color: #2ecc71; position: relative; top: 1px"></i>
       {{/ifNotIE8}}
       {{s.notificationsAlreadySubscribed}}
     </p>
-  {{else}} {{!-- !subscribed --}}
+    {{else}} {{!-- !subscribed --}}
     {{#if canSubscribe}}
-      <p class="HeadingF HeadingF--light "><i class="fa fa-bell-o"></i>&nbsp;<strong>{{txt1}}</strong></p>
-      <form role="form" class="FormVertical" id="subscribeEmailForm">
-        {{#if email}}
-          <p>{{s.notificationsGetNotified}}</p>
-          <pre>{{email}}</pre>
-        {{else}} {{!-- !email --}}
-          <p>{{s.notificationsEnterEmail}}</p>
-          <div class="FormVertical-group">
-            <label class="FormLabel" for="gatekeeperEmailCreate">{{s.labelEmail}}</label>
-            <input type="text" name="email" id="gatekeeperEmailCreate" size="40" class="email FormControl" {{#if readonlyEmail}}readonly{{/if}}>
-          </div>
-        {{/if}} {{!-- /email --}}
-        <div class="FormVertical-group">
-          <button id="subscribeBtn" class="Btn Btn-primary unselectable" style="
+    <p class="HeadingF HeadingF--light "><i class="fa fa-bell-o"></i>&nbsp;<strong>{{txt1}}</strong></p>
+    <form role="form" class="FormVertical" id="subscribeEmailForm">
+      {{#if email}}
+      <p>{{s.notificationsGetNotified}}</p>
+      <pre>{{email}}</pre>
+      {{else}} {{!-- !email --}}
+      <p>{{s.notificationsEnterEmail}}</p>
+      <div class="FormVertical-group">
+        <label class="FormLabel" for="gatekeeperEmailCreate">{{s.labelEmail}}</label>
+        <input type="text" name="email" id="gatekeeperEmailCreate" size="40" class="email FormControl" {{#if
+          readonlyEmail}}readonly{{/if}}>
+      </div>
+      {{/if}} {{!-- /email --}}
+      <div class="FormVertical-group">
+        <button id="subscribeBtn" class="Btn Btn-primary unselectable" style="
             text-transform: none;
             font-size: 16px;
             font-weight: 500;
@@ -51,16 +51,16 @@
             margin-top: 10px;
             {{customBtnStyles}}
             ">{{s.notificationsSubscribeButton}}</button>
-        </div>
-      </form>
+      </div>
+    </form>
     {{else}} {{!-- !canSubscribe --}}
-      <div><strong>{{txt1}}</strong></div>
-      <div>{{txt2}}</div>
+    <div><strong>{{txt1}}</strong></div>
+    <div>{{txt2}}</div>
     {{/if}} {{!-- /canSubscribe --}}
-  {{/if}} {{!-- /subscribed --}}
+    {{/if}} {{!-- /subscribed --}}
   </div> {{!-- /empty scenario div --}}
 
-{{else}} {{!-- !empty --}}
+  {{else}} {{!-- !empty --}}
 
   <!-- there is a comment to show -->
   <div> {{!-- notempty scenario div --}}
@@ -70,10 +70,7 @@
     </span>
 
     {{! social stuff }}
-    <img
-      src="{{social.img}}"
-      alt=""
-      style="
+    <img src="{{social.img}}" alt="" style="
         width: 36px;
         min-height: 36px;
         min-width: 36px;
@@ -81,10 +78,8 @@
         margin-top: 10px;
         border-radius: 3px;
         border: 1px solid #ccc;
-        "
-      ></img>
-    <p
-      style="
+        "></img>
+    <p style="
         display: inline;
         position: relative;
         top: -3px;
@@ -94,15 +89,11 @@
       {{social.name}}
       <span style="
       ">
-        {{#if tweet_id}}
-          <a href="https://twitter.com/{{social.screen_name}}/status/{{tweet_id}}" target="_blank">{{s.x_tweeted}}</a>
-        {{else}} {{!-- !tweet_id --}}
-          {{#if quote_src_url}}
-            <a href="{{quote_src_url}}" target="_blank">{{s.x_wrote}}</a>
-          {{else}}
-            {{s.x_wrote}}
-          {{/if}}
-        {{/if}} {{!-- /tweet_id --}}
+        {{#if quote_src_url}}
+        <a href="{{quote_src_url}}" target="_blank">{{s.x_wrote}}</a>
+        {{else}}
+        {{s.x_wrote}}
+        {{/if}}
       </span>
       <span aria-hidden="true" style="
         {{floatStyle}}
@@ -118,8 +109,6 @@
         {{remainingString}}
       </span>
     </p>
-    {{!-- {{social.twitter_user_id}} --}}
-    {{!-- {{social.screen_name}} --}}
     <p lang="{{lang}}" style="
       {{pMarginStyle}} {{!-- 10 + 36 + 5 from social above --}}
       font-weight: 400;
@@ -130,27 +119,25 @@
       line-height: 1.3;
       font-size: 18px;
       {{customStyles}}
-    "
-      dir="auto"
-      >
+    " dir="auto">
       {{txt}}
     </p>
 
     {{#if showShowTranslationButton}}
-      <button style="
+    <button style="
         margin-inline-start: 55px;
         margin-bottom: 20px;
       " id="showTranslationButtonVoteView">{{showTranslationButton}}</button>
     {{/if}}
     {{#if showHideTranslationButton}}
-      <button style="
+    <button style="
         margin-inline-start: 55px;
         margin-bottom: 20px;
       " id="hideTranslationButtonVoteView">{{s.hideTranslationButton}}</button>
     {{/if}}
 
     {{#if translationTxt}}
-      <p lang="{{translationLang}}" style="
+    <p lang="{{translationLang}}" style="
         {{pMarginStyle}} {{!-- 10 + 36 + 5 from social above --}}
         font-weight: 400;
         min-height: 55px;
@@ -161,10 +148,10 @@
         font-size: 18px;
         {{customStyles}}
       ">
-        {{translationTxt}}
-      </p>
-      {{#if thirdPartyTranslationDisclaimer }}
-        <p lang="{{translationLang}}" style="
+      {{translationTxt}}
+    </p>
+    {{#if thirdPartyTranslationDisclaimer }}
+    <p lang="{{translationLang}}" style="
           {{pMarginStyle}}; {{!-- 10 + 36 + 5 from social above --}}
           position: relative;
           top: -8px;
@@ -174,32 +161,31 @@
           font-size: 14px;
           {{customStyles}}
         ">
-          {{thirdPartyTranslationDisclaimer}}
-        </p>
-      {{/if}}
+      {{thirdPartyTranslationDisclaimer}}
+    </p>
+    {{/if}}
     {{/if}}
     {{!-- {{createdString}} --}}
 
 
   </div> {{!-- /notempty scenario div --}}
-{{/if}} {{!-- /empty --}}
+  {{/if}} {{!-- /empty --}}
 
-{{!--   </div> --}}
+  {{!--
+</div> --}}
 
 
 {{#if empty}}
-  {{!-- nothing --}}
+{{!-- nothing --}}
 {{else}} {{!-- !empty --}}
-  {{#if shouldMod}}
-  <div class="modButtonContainer">
-    <div
-      class="
+{{#if shouldMod}}
+<div class="modButtonContainer">
+  <div class="
         flexbox
         justify-content-space-around
         align-items-baseline
         unselectable
-      "
-      style="
+      " style="
         display: -webkit-box;
         display: -moz-box;
         display: -ms-flexbox;
@@ -209,66 +195,52 @@
         justify-content: flex-start;
         margin-bottom: 20px;
       ">
-      <div
-        id="spamToggle"
-        class="modToggle moderateButton {{#if spamOn}}selectedModerateButton{{/if}}"
-        >
-        {{s.modSpam}}
-      </div>
-      <div
-        id="otToggle"
-        class="modToggle moderateButton {{#if otOn}}selectedModerateButton{{/if}}"
-        >
-        {{s.modOffTopic}}
-      </div>
-      <div
-        id="importantToggle"
-        class="modToggle moderateButton {{#if importantOn}}selectedModerateButton{{/if}}"
-        >
-        {{s.modImportant}}
-      </div>
+    <div id="spamToggle" class="modToggle moderateButton {{#if spamOn}}selectedModerateButton{{/if}}">
+      {{s.modSpam}}
     </div>
-    <div id="modSubmit" class="modToggle moderateSubmitButton">
-      {{#if noModSet}}
-        {{s.modSubmitInitialState}}
-      {{else}}
-        {{s.modSubmit}}
-      {{/if}}
+    <div id="otToggle" class="modToggle moderateButton {{#if otOn}}selectedModerateButton{{/if}}">
+      {{s.modOffTopic}}
+    </div>
+    <div id="importantToggle" class="modToggle moderateButton {{#if importantOn}}selectedModerateButton{{/if}}">
+      {{s.modImportant}}
     </div>
   </div>
-  {{else}} {{!-- !shouldMod --}}
-    {{#if showImportantCheckbox}}
-    <div style="text-align: center; margin-bottom: 20px">
-      <label class="weight-label">
-        <span class="weight-radio"></span>
-        <input type="checkbox" name="checkbox" id="weight_high" aria-describedby="importantCheckboxDesc">
-        {{s.importantCheckbox}}
-        <span id="importantCheckboxDesc" class="is-visually-hidden">
-          {{s.importantCheckboxDesc}}
-        </span>
-      </label>
-      <i class="svgIcon" style="
+  <div id="modSubmit" class="modToggle moderateSubmitButton">
+    {{#if noModSet}}
+    {{s.modSubmitInitialState}}
+    {{else}}
+    {{s.modSubmit}}
+    {{/if}}
+  </div>
+</div>
+{{else}} {{!-- !shouldMod --}}
+{{#if showImportantCheckbox}}
+<div style="text-align: center; margin-bottom: 20px">
+  <label class="weight-label">
+    <span class="weight-radio"></span>
+    <input type="checkbox" name="checkbox" id="weight_high" aria-describedby="importantCheckboxDesc">
+    {{s.importantCheckbox}}
+    <span id="importantCheckboxDesc" class="is-visually-hidden">
+      {{s.importantCheckboxDesc}}
+    </span>
+  </label>
+  <i class="svgIcon" style="
         display: inline-block;
         position: relative;
         top: 2px;
         width: 17px;
         fill: #8a8a8a;
-        "
-        data-text="{{s.importantCheckboxDesc}}"
-        onclick="alert(this.dataset.text)"
-        aria-hidden="true"
-        >{{> iconFaCircleQuestion}}</i>
-    </div>
-    {{/if}}
-    <div
-      class="
+        " data-text="{{s.importantCheckboxDesc}}" onclick="alert(this.dataset.text)" aria-hidden="true">{{>
+    iconFaCircleQuestion}}</i>
+</div>
+{{/if}}
+<div class="
         reactionButtons
         flexbox
         justify-content-space-around
         align-items-baseline
         unselectable
-      "
-      style="
+      " style="
         display: -webkit-box;
         display: -moz-box;
         display: -ms-flexbox;
@@ -278,11 +250,8 @@
         justify-content: space-around;
         margin-bottom: 20px;
       ">
-      <button
-        id="agreeButton"
-        class="reactionButton"
-        >
-        <i class="svgIcon" style="
+  <button id="agreeButton" class="reactionButton">
+    <i class="svgIcon" style="
           display: inline-block;
           position: relative;
           margin-inline-end: 2px;
@@ -290,13 +259,10 @@
           width: 22px;
           fill: #2ecc71;
           ">{{> iconFaCircleCheck}}</i>
-        {{s.agree}}
-      </button>
-      <button
-        id="disagreeButton"
-        class="reactionButton"
-        >
-        <i class="svgIcon" style="
+    {{s.agree}}
+  </button>
+  <button id="disagreeButton" class="reactionButton">
+    <i class="svgIcon" style="
           display: inline-block;
           position: relative;
           margin-inline-end: 2px;
@@ -304,26 +270,21 @@
           width: 22px;
           fill: #e74c3c;
           ">{{> iconFaBan}}</i>
-        {{s.disagree}}
-      </button>
-      <button
-        id="passButton"
-        class="reactionButton"
-        >
-        {{s.pass}}
-      </button>
-    </div>
+    {{s.disagree}}
+  </button>
+  <button id="passButton" class="reactionButton">
+    {{s.pass}}
+  </button>
+</div>
 
 
 
-  {{/if}} {{!-- /shouldMod --}}
+{{/if}} {{!-- /shouldMod --}}
 
 {{/if}} {{!-- /empty --}}
 
 
-{{/if}}  {{!-- /needSocial --}}
-
-
-<div id="hereIsNextStatementLabel" style="display: none" class="screen-reader-text" role="alert">{{s.hereIsNextStatement}}</div>
+<div id="hereIsNextStatementLabel" style="display: none" class="screen-reader-text" role="alert">
+  {{s.hereIsNextStatement}}</div>
 
 </div> {{!-- /comment_shower div --}}
