--- a/client-participation-alpha/src/components/Header.astro
+++ b/client-participation-alpha/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
 ---
 <header style="text-align: center; margin-bottom: 2rem;">
-  <div class="logo">p.</div>
+  <div class="logo">p</div>
 </header>
