--- a/client-participation-alpha/src/pages/layouts/Layout.astro
+++ b/client-participation-alpha/src/pages/layouts/Layout.astro
@@ -7,6 +7,7 @@ const { title = 'Polis Conversation' } = Astro.props;
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>{title}</title>
 </head>
 <body>
