--- a/client-participation/js/templates/participation.handlebars
+++ b/client-participation/js/templates/participation.handlebars
@@ -354,6 +354,9 @@
       >
         {{> linkPrivacy}}
         {{> linkTos}}
+        <div id="polis-donate">
+          <i>Polis is powered by support from people like you. Contribute at <a href="https://donorbox.org/geo-polis">https://donorbox.org/geo-polis</a>.</i>
+        </div>
     </div>
   </div>
 
